updated sql property file

--- a/src/main/resources/sqlcmds.properties
+++ b/src/main/resources/sqlcmds.properties
@@ -1,4 +1,4 @@
-
+#Sql commands for CRUD operations
 sql.get_all_students = select * from springrest.studentop
 
 sql.get_student = select * from springrest.studentop where id=?
